# django-canonical-domain

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
canonical_domain/: apps.py  middleware.py
docs/: conf.py  index.rst
tests/testapp/: settings.py  test_middleware.py  urls.py
