[metadata]
name = django_canonical_domain
version = attr: canonical_domain.__version__
description = Canonical domain redirection for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/django-canonical-domain/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    Django>=4.2
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.packages.find]
exclude = tests

[options.extras_require]
tests =
    coverage

[flake8]
exclude = venv,.tox,migrations,docs
ignore = E203,W503
max-complexity = 10
max-line-length = 88

[coverage:run]
branch = True
include =
    *canonical_domain*
omit =
    *migrations*
    *tests*
    *.tox*
